packages/Sympathy/Sympathy-1.6.2-py3-none-any.whl/sympathy_app/Sympathy/Test/Unit/Workflows/errors/link_loop_indirect/link_loop_b.syx
<?xml version='1.0' encoding='ASCII'?>
<flow xmlns="http://www.sysess.org/sympathyfordata/workflow/1.0" cls="Flow" height="50.0" id="" is_locked="False" uuid="{c3d68506-7c85-496b-a217-9d47cfb1b31a}" width="50.0" x="1667.0" y="1970.0">
  <label/>
  <description></description>
  <author></author>
  <copyright></copyright>
  <version></version>
  <min_version></min_version>
  <aggregation type="json">null</aggregation>
  <libraries type="json">[]</libraries>
  <pythonpaths type="json">[]</pythonpaths>
  <overrides type="json">{}</overrides>
  <parameters type="json">{}</parameters>
  <ports/>
  <flow cls="Flow" height="50.0" id="" is_locked="False" source_uuid="{591715a9-f160-4b63-b7fa-df5306dceacb}" uuid="{a707eb18-5251-4878-9e94-3020bf557c7f}" width="50.0" x="1750.0" y="1925.0" href="link_loop_c.syx">
    <label>link_loop_c</label>
    <overrides type="json">{}</overrides>
    <ports/>
  </flow>
</flow>
